<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="b07.PIII.featuredflights.MainActivity" >

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_alignLeft="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_marginBottom="34dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:typeface="serif" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/agent"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:typeface="serif" />

    <Button
        android:id="@+id/login_as_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp"
        android:background="@color/DeepBlue"
        android:onClick="logInAsGuest"
        android:text="@string/login_as_guest"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_as_guest"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:background="@color/DeepBlue"
        android:onClick="logIn"
        android:text="@string/login_text"
        android:textColor="@color/White" />

</RelativeLayout>