<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="b07.PIII.featuredflights.GeneralOptions" >

    <Button
        android:id="@+id/searchFlightBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewBookedBtn"
        android:layout_below="@+id/viewBookedBtn"
        android:layout_marginTop="61dp"
        android:background="@color/DeepBlue"
        android:onClick="searchFlight"
        android:text="@string/Search_Flight"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/editInfoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchFlightBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:background="@color/DeepBlue"
        android:onClick="editInfo"
        android:text="@string/edit_info"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/viewBookedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editInfoBtn"
        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp"
        android:background="@color/DeepBlue"
        android:onClick="viewBooked"
        android:text="@string/view_booked"
        android:textColor="@color/White" />

</RelativeLayout>