<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="b07.PIII.featuredflights.UploadOptions" >

    <Button
        android:id="@+id/uploadFlightInfoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="@color/DeepBlue"
        android:onClick="uploadFlightInfo"
        android:text="@string/upload_flight_info"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/uploadClientInfoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uploadFlightInfoBtn"
        android:layout_alignStart="@+id/uploadFlightInfoBtn"
        android:layout_below="@+id/uploadFlightInfoBtn"
        android:layout_marginTop="36dp"
        android:background="@color/DeepBlue"
        android:onClick="uploadClientInfo"
        android:text="@string/upload_client_info"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/uploadAdminInfoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uploadClientInfoBtn"
        android:layout_alignStart="@+id/uploadFlightInfoBtn"
        android:layout_below="@+id/uploadClientInfoBtn"
        android:layout_marginTop="46dp"
        android:background="@color/DeepBlue"
        android:onClick="uploadAdminInfo"
        android:text="@string/upload_admin_info"
        android:textColor="@color/White" />

</RelativeLayout>